--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "devDependencies": {
     "autoprefixer": "^9.1.0",
     "bootstrap": "^4.1.3",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.2",
