--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "script-loader": "^0.7.2",
     "slick-carousel": "^1.7.1",
     "style-loader": "^0.21.0",
+    "superagent": "^3.8.3",
     "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.4",
