--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "bootstrap": "^4.1.3",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "expose-loader": "^0.7.5",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
+    "imagemin-webpack": "^3.0.0",
     "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.1.0",
