--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
+    "dotenv-webpack": "^2.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
@@ -46,6 +47,8 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "acorn": "^6.4.1",
+    "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "npm": "^6.9.2",
     "popper": "^1.0.1",
